--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
             <a href="tel:+74999228974" class="header__phone"
               >+7 (499) 922-89-74</a
             >
-            <button class="button">Заказать звонок</button>
+            <button class="button">Заказать зв</button>
           </div>
         </header>
       </div>
