--- a/src/index.html
+++ b/src/index.html
@@ -25,9 +25,60 @@
             <a href="tel:+74999228974" class="header__phone"
               >+7 (499) 922-89-74</a
             >
-            <button class="button">Заказать зв</button>
+            <button class="button">Заказать звонок</button>
           </div>
         </header>
+        <div class="promo__wrapper">
+          <h1 class="promo__header">Подбор пульсометра</h1>
+          <h2 class="promo__subheader">с учётом Вашего уровня подготовки</h2>
+          <div class="promo__icons">
+            <div class="promo__icon">
+              <img src="img/ico/timer.png" alt="timer" />Время подбора:10 минут
+            </div>
+            <div class="promo__icon">
+              <img src="img/ico/dost.png" alt="dost" />Бесплатная доставка
+            </div>
+            <div class="promo__icon">
+              <img src="img/ico/messages.png" alt="message" />Ответим на все
+              вопросы
+            </div>
+          </div>
+          <div class="button button_main">Заказать консультацию</div>
+          <div class="promo__link">
+            или
+            <a href="#">перейти в каталог</a>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="advantages">
+      <div class="container">
+        <h3>Наши преимущества</h3>
+        <div class="advantages__wrapper">
+          <div class="advantages__icons">
+            <div class="advantages__icon">
+              <img src="img/ico/cup.png" alt="cup" />
+              <p>Делимся опытом</p>
+              Наши сотрудники всегда готовы поделиться своим опытом, так как
+              сами бегают полумарафоны, переплыли Босфор, готовятся к
+              соревнованиям по триатлону!
+            </div>
+            <div class="advantages__icon">
+              <img src="img/ico/heart.png" alt="heart" />
+              <p>Заботимся о здоровье</p>
+              Мы работаем для того, <br />чтобы Ваши занятия спортом шли на
+              <br />пользу Вашему здоровью и были в радость Вам и Вашим близким!
+            </div>
+            <div class="advantages__icon">
+              <img src="img/ico/shoe.png" alt="shoe" />
+              <p>Учим бегать</p>
+              Помогаем с обучением <br />
+              правильной технике бега! <br />Дружим с крупнейшей школой бега в
+              <br />России - <span>I LOVE RUNNING.</span>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </body>
