--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>pulse</title>
+    <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/fonts.css" />
     <link rel="stylesheet" href="css/style.min.css" />
   </head>
@@ -79,6 +80,16 @@
             </div>
           </div>
         </div>
+      </div>
+    </div>
+    <div class="consultation">
+      <div class="container">
+        <h2 class="title">
+          Получите бесплатную консультацию <br />по подбору пульсометра
+        </h2>
+        <h3 class="subtitle">
+          Просто заполните форму заявки и мы перезвоним вам в течении 10 минут
+        </h3>
       </div>
     </div>
   </body>
