--- a/src/index.html
+++ b/src/index.html
@@ -7,10 +7,11 @@
     <title>pulse</title>
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/fonts.css" />
+    <link rel="stylesheet" href="css/slick.css" />
     <link rel="stylesheet" href="css/style.min.css" />
   </head>
   <body>
-    <div class="promo">
+    <section class="promo">
       <div class="container">
         <header class="header">
           <div class="header__logo">
@@ -51,9 +52,9 @@
           </div>
         </div>
       </div>
-    </div>
+    </section>
 
-    <div class="advantages">
+    <section class="advantages">
       <div class="container">
         <h3>Наши преимущества</h3>
         <div class="advantages__wrapper">
@@ -81,16 +82,45 @@
           </div>
         </div>
       </div>
-    </div>
-    <div class="consultation">
+    </section>
+    <section class="consultation">
       <div class="container">
         <h2 class="title">
           Получите бесплатную консультацию <br />по подбору пульсометра
         </h2>
-        <h3 class="subtitle">
-          Просто заполните форму заявки и мы перезвоним вам в течении 10 минут
-        </h3>
+        <div class="subtitle">
+          Просто заполните форму заявки <br />
+          и мы перезвоним вам в течении 10 минут
+        </div>
+        <form class="feed-form" action="#">
+          <input required placeholder="Ваше имя" type="text" />
+          <input required placeholder="Ваш телефон" type="text" />
+          <input required placeholder="Ваш E-mail" type="text" />
+          <button class="button button_subbmit">Заказать консультацию</button>
+        </form>
       </div>
-    </div>
+    </section>
+
+    <section class="carousel">
+      <div class="container">
+        <div class="carousel__inner">
+          <div><img src="img/img/carousel/Слайд №1.png" alt="slide" /></div>
+          <div><img src="img/img/carousel/Слайд №2.png" alt="slide" /></div>
+          <div><img src="img/img/carousel/Слайд №3.png" alt="slide" /></div>
+        </div>
+      </div>
+    </section>
+    <script
+      type="text/javascript"
+      src="//code.jquery.com/jquery-1.11.0.min.js"
+    ></script>
+
+    <script
+      type="text/javascript"
+      src="//code.jquery.com/jquery-migrate-1.2.1.min.js"
+    ></script>
+
+    <script src="js/slick.min.js"></script>
+    <script src="js/script.js"></script>
   </body>
 </html>
