--- a/src/index.html
+++ b/src/index.html
@@ -110,6 +110,269 @@
         </div>
       </div>
     </section>
+
+    <section class="catalog">
+      <div class="container">
+        <h3>Каталог пульсометров</h3>
+        <div class="catalog__tabs">
+          <ul class="tabs">
+            <li class="tab tab_active"><div class="deg">Для фитнеса</div></li>
+            <li class="tab"><div class="deg">для бега</div></li>
+            <li class="tab"><div class="deg">для триатлона</div></li>
+          </ul>
+        </div>
+        <div class="content">
+          <div class="content__item">
+            <div class="catalog-item__wrapper">
+              <div class="catalog-item__content catalog-item__content_active">
+                <img class="item_img" src="img/img/photo.png" alt="polar" />
+                <div class="item_subtitle">Пульсометр Polar FT1</div>
+                <div class="item_decription">
+                  Для первых шагов в тренировках, основанных на сердечном ритме
+                </div>
+                <a href="#" class="link_item">Подробнее</a>
+              </div>
+              <ul class="catalog-item__list">
+                <li>
+                  Вы услышите звуковое оповещение о нужном пульсе во время
+                  тренировки;
+                </li>
+                <li>
+                  Вы увидите информативный графический индикатор целевых
+                  тренировочных зон пульса;
+                </li>
+                <li>
+                  Также Вы увидите информацию о расходе калорий за тренировку;
+                </li>
+                <li>Вы сможете посмотреть данные по 10 тренировкам.</li>
+              </ul>
+              <a href="#" class="catalog_item__back">Назад</a>
+            </div>
+            <hr />
+            <footer class="content_footer">
+              <div class="content_price">
+                <div class="price_old">4 750 руб.</div>
+                <div class="price_new">4 500 руб.</div>
+              </div>
+              <button class="footer_button">КУПИТЬ</button>
+            </footer>
+          </div>
+          <div class="content__item">
+            <div class="catalog-item__wrapper">
+              <div class="catalog-item__content catalog-item__content_active">
+                <img class="item_img" src="img/img/photo.png" alt="polar" />
+                <div class="item_subtitle">Пульсометр Polar FT1</div>
+                <div class="item_decription">
+                  Для первых шагов в тренировках, основанных на сердечном ритме
+                </div>
+                <a href="#" class="link_item">Подробнее</a>
+              </div>
+              <ul class="catalog-item__list catalog">
+                <li>
+                  Вы услышите звуковое оповещение о нужном пульсе во время
+                  тренировки;
+                </li>
+                <li>
+                  Вы увидите информативный графический индикатор целевых
+                  тренировочных зон пульса;
+                </li>
+                <li>
+                  Также Вы увидите информацию о расходе калорий за тренировку;
+                </li>
+                <li>Вы сможете посмотреть данные по 10 тренировкам.</li>
+              </ul>
+              <a href="#" class="catalog_item__back">Назад</a>
+            </div>
+            <hr />
+            <footer class="content_footer">
+              <div class="content_price">
+                <div class="price_old">4 750 руб.</div>
+                <div class="price_new">4 500 руб.</div>
+              </div>
+              <button class="footer_button">КУПИТЬ</button>
+            </footer>
+          </div>
+          <div class="content__item">
+            <div class="catalog-item__wrapper">
+              <div
+                class="catalog-item__content catalog-item__content catalog-item__content_active"
+              >
+                <img class="item_img" src="img/img/photo.png" alt="polar" />
+                <div class="item_subtitle">Пульсометр Polar FT1</div>
+                <div class="item_decription">
+                  Для первых шагов в тренировках, основанных на сердечном ритме
+                </div>
+                <a href="#" class="link_item">Подробнее</a>
+              </div>
+              <ul class="catalog-item__list">
+                <li>
+                  Вы услышите звуковое оповещение о нужном пульсе во время
+                  тренировки;
+                </li>
+                <li>
+                  Вы увидите информативный графический индикатор целевых
+                  тренировочных зон пульса;
+                </li>
+                <li>
+                  Также Вы увидите информацию о расходе калорий за тренировку;
+                </li>
+                <li>Вы сможете посмотреть данные по 10 тренировкам.</li>
+              </ul>
+              <a href="#" class="catalog_item__back">Назад</a>
+            </div>
+            <hr />
+            <footer class="content_footer">
+              <div class="content_price">
+                <div class="price_old">4 750 руб.</div>
+                <div class="price_new">4 500 руб.</div>
+              </div>
+              <button class="footer_button">КУПИТЬ</button>
+            </footer>
+          </div>
+          <div class="content__item">
+            <div class="catalog-item__wrapper">
+              <div class="catalog-item__content catalog-item__content_active">
+                <img class="item_img" src="img/img/photo.png" alt="polar" />
+                <div class="item_subtitle">Пульсометр Polar FT1</div>
+                <div class="item_decription">
+                  Для первых шагов в тренировках, основанных на сердечном ритме
+                </div>
+                <a href="#" class="link_item">Подробнее</a>
+              </div>
+              <ul class="catalog-item__list">
+                <li>
+                  Вы услышите звуковое оповещение о нужном пульсе во время
+                  тренировки;
+                </li>
+                <li>
+                  Вы увидите информативный графический индикатор целевых
+                  тренировочных зон пульса;
+                </li>
+                <li>
+                  Также Вы увидите информацию о расходе калорий за тренировку;
+                </li>
+                <li>Вы сможете посмотреть данные по 10 тренировкам.</li>
+              </ul>
+              <a href="#" class="catalog_item__back">Назад</a>
+            </div>
+            <hr />
+            <footer class="content_footer">
+              <div class="content_price">
+                <div class="price_old">4 750 руб.</div>
+                <div class="price_new">4 500 руб.</div>
+              </div>
+              <button class="footer_button">КУПИТЬ</button>
+            </footer>
+          </div>
+          <div class="content__item">
+            <div class="catalog-item__wrapper">
+              <div class="catalog-item__content">
+                <img class="item_img" src="img/img/photo.png" alt="polar" />
+                <div class="item_subtitle">Пульсометр Polar FT1</div>
+                <div class="item_decription">
+                  Для первых шагов в тренировках, основанных на сердечном ритме
+                </div>
+                <a href="#" class="link_item">Подробнее</a>
+              </div>
+              <ul class="catalog-item__list catalog-item__list_active">
+                <li>
+                  Вы услышите звуковое оповещение о нужном пульсе во время
+                  тренировки;
+                </li>
+                <li>
+                  Вы увидите информативный графический индикатор целевых
+                  тренировочных зон пульса;
+                </li>
+                <li>
+                  Также Вы увидите информацию о расходе калорий за тренировку;
+                </li>
+                <li>Вы сможете посмотреть данные по 10 тренировкам.</li>
+              </ul>
+              <a href="#" class="catalog_item__back">Назад</a>
+            </div>
+            <hr />
+            <footer class="content_footer">
+              <div class="content_price">
+                <div class="price_old">4 750 руб.</div>
+                <div class="price_new">4 500 руб.</div>
+              </div>
+              <button class="footer_button">КУПИТЬ</button>
+            </footer>
+          </div>
+          <div class="content__item">
+            <div class="catalog-item__wrapper">
+              <div class="catalog-item__content catalog-item__content_active">
+                <img class="item_img" src="img/img/photo.png" alt="polar" />
+                <div class="item_subtitle">Пульсометр Polar FT1</div>
+                <div class="item_decription">
+                  Для первых шагов в тренировках, основанных на сердечном ритме
+                </div>
+                <a href="#" class="link_item">Подробнее</a>
+              </div>
+              <ul class="catalog-item__list catalog-item">
+                <li>
+                  Вы услышите звуковое оповещение о нужном пульсе во время
+                  тренировки;
+                </li>
+                <li>
+                  Вы увидите информативный графический индикатор целевых
+                  тренировочных зон пульса;
+                </li>
+                <li>
+                  Также Вы увидите информацию о расходе калорий за тренировку;
+                </li>
+                <li>Вы сможете посмотреть данные по 10 тренировкам.</li>
+              </ul>
+              <a href="#" class="catalog_item__back">Назад</a>
+            </div>
+            <hr />
+            <footer class="content_footer">
+              <div class="content_price">
+                <div class="price_old">4 750 руб.</div>
+                <div class="price_new">4 500 руб.</div>
+              </div>
+              <button class="footer_button">КУПИТЬ</button>
+            </footer>
+          </div>
+          <div class="content__item">
+            <div class="catalog-item__wrapper">
+              <div class="catalog-item__content catalog-item__content_active">
+                <img class="item_img" src="img/img/photo.png" alt="polar" />
+                <div class="item_subtitle">Пульсометр Polar FT1</div>
+                <div class="item_decription">
+                  Для первых шагов в тренировках, основанных на сердечном ритме
+                </div>
+                <a href="#" class="link_item">Подробнее</a>
+              </div>
+              <ul class="catalog-item__list">
+                <li>
+                  Вы услышите звуковое оповещение о нужном пульсе во время
+                  тренировки;
+                </li>
+                <li>
+                  Вы увидите информативный графический индикатор целевых
+                  тренировочных зон пульса;
+                </li>
+                <li>
+                  Также Вы увидите информацию о расходе калорий за тренировку;
+                </li>
+                <li>Вы сможете посмотреть данные по 10 тренировкам.</li>
+              </ul>
+              <a href="#" class="catalog_item__back">Назад</a>
+            </div>
+            <hr />
+            <footer class="content_footer">
+              <div class="content_price">
+                <div class="price_old">4 750 руб.</div>
+                <div class="price_new">4 500 руб.</div>
+              </div>
+              <button class="footer_button">КУПИТЬ</button>
+            </footer>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <script
       type="text/javascript"
       src="//code.jquery.com/jquery-1.11.0.min.js"
