--- a/src/index.html
+++ b/src/index.html
@@ -107,7 +107,7 @@
         </div>
         <form id="consultation form" class="feed-form" action="#">
           <input name="name" placeholder="Ваше имя" type="text" />
-          <input name="phone" placeholder="Ваш телефон" type="number" />
+          <input name="phone" placeholder="Ваш телефон" />
           <input name="email" placeholder="Ваш E-mail" type="email" />
 
           <button class="button button_submit">заказать консультацию</button>
@@ -619,12 +619,7 @@
         </div>
         <form class="feed-form" action="#">
           <input name="name" required placeholder="Ваше имя" type="text" />
-          <input
-            name="phone"
-            required
-            placeholder="Ваш телефон"
-            type="number"
-          />
+          <input name="phone" required placeholder="Ваш телефон" />
           <input name="email" required placeholder="Ваш E-mail" type="email" />
 
           <button class="button button_submit">заказать консультацию</button>
@@ -636,12 +631,7 @@
         <div class="modal_description">Пульсометр Polar FT1</div>
         <form class="feed-form" action="#">
           <input name="name" required placeholder="Ваше имя" type="text" />
-          <input
-            name="phone"
-            required
-            placeholder="Ваш телефон"
-            type="number"
-          />
+          <input name="phone" required placeholder="Ваш телефон" />
           <input name="email" required placeholder="Ваш E-mail" type="email" />
 
           <button class="button button_submit">Купить</button>
@@ -668,6 +658,7 @@
 
     <script src="js/slick.min.js"></script>
     <script src="js/jquery.validate.min.js"></script>
+    <script src="js/input.min.js"></script>
     <script src="js/script.js"></script>
   </body>
 </html>
