--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="css/style.min.css" />
   </head>
   <body>
-    <section class="promo">
+    <section id="up" class="promo">
       <div class="container">
         <header class="header">
           <a href="#" class="header__logo">
@@ -75,7 +75,11 @@
             </div>
           </div>
           <div class="advantages__item">
-            <img src="img/ico/heart.png" alt="heart" class="advantages__icon" />
+            <img
+              src="img/ico/heart.png"
+              alt="heart"
+              class="advantages__icon advantages__icon_animated"
+            />
             <div class="advantages__subtitle">Заботимся о здоровье</div>
             <div class="advantages__descr">
               Мы работаем для того, чтобы Ваши занятия спортом шли на пользу
@@ -645,6 +649,9 @@
         </div>
       </div>
     </div>
+    <a href="#up" class="pageup"
+      ><img src="img/background/up.png" alt="up"
+    /></a>
 
     <script
       type="text/javascript"
@@ -658,7 +665,7 @@
 
     <script src="js/slick.min.js"></script>
     <script src="js/jquery.validate.min.js"></script>
-    <script src="js/input.min.js"></script>
+    <script src="js/jquery.maskedinput.min.js"></script>
     <script src="js/script.js"></script>
   </body>
 </html>
